# thermo-reader

./: .gitignore  README.md  main.bat  main.py  main.spec  pyproject.toml  thermo_convert.py  thermo_convert.spec  thermo_reader.spec  uv.lock.license
LICENSES/: LicenseRef-RawFileReader-reading-tool.txt
src/thermo_reader/: __init__.py  collect_figs.py  data_source.py  load_thermo.py  msi_instrument.py  process_args.py  thermo.py
src/thermo_reader/dlls/: License.md  ThermoFisher.CommonCore.MassPrecisionEstimator.xml.license
