# SPDX-FileCopyrightText: 2026 RFI
#
# SPDX-License-Identifier: Apache-2.0

[project]
name = "thermo-reader"
version = "0.1.2"
description = "A tool for reading thermo Raw files and converting them to varius formats."
readme = "README.md"
authors = [
    { name = "Duncan McDougall", email = "duncan.mcdougall@rfi.ac.uk" }
]
requires-python = ">=3.12,<3.14"
dependencies = [
    "colorama>=0.4.6",
    "datargs",
    "h5py>=3.16.0",
    "icecream>=2.1.10",
    "ms-nexus-tools",
    "pythonnet>=3.0.5",
]
license = "Apache-2.0 AND LicenseRef-RawFileReader-reading-tool"
license-files = ["LICENSES/*"]

[project.scripts]
main = "thermo_reader:source"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[tool.uv.sources]
ms-nexus-tools = { path = "../ms-nexus-tools", editable = true }
datargs = { path = "../datargs", editable = true }

[tool.line_profiler.kernprof]
line-by-line = true
verbose = false
skip-zero = true
prof-mod = ['./src/thermo_reader/', 'thermo_reader', '../ms-nexus-tools/src/ms_nexus_tools/', 'ms_nexus_tools']
prof-imports = false

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
    "line-profiler>=5.0.1",
]

[tool.ruff.lint]
select=['E1', 'E4','E7','E9','F','N','ERA', 'ANN2', 'S', 'BLE', 'B', 'A', 'C4', 'COM', 'ISC', 'ICN', 'LOG', 'PIE','RET', 'SLF','SIM', 'TD', 'ARG', 'PTH', 'FLY', 'NPY', 'PERF', "D2", "TRY", "PT"]
ignore=["C408", "S311", "PTH123", "NPY002", "D203", "D205", "D212", "B006", "ARG001", "ARG002", "D200", "ANN204", "S101", "TRY003", 'RET504', 'COM812']
# From some modules: T20 -. Print   

[tool.ruff.lint.per-file-ignores]
"src/thermo_reader/load_thermo.py" = ["E402", "N802"]
